fix button for saving stops

--- a/project/templates/project/create_itinerarystop_form.html
+++ b/project/templates/project/create_itinerarystop_form.html
@@ -53,7 +53,7 @@ Description: Form template for adding a new itinerary stop to a trip.
                     </div>
                     {% endif %}
                 {% endfor %}
-                <button type="submit" class="btn btn-dark">Save Stop</button>
+                <button type="submit" class="btn btn-dark btn-sm px-3">Save Stop</button>
             </form>
         </div>
     </div>
