--- a/project/templates/project/update_itinerarystop_form.html
+++ b/project/templates/project/update_itinerarystop_form.html
@@ -53,7 +53,7 @@ Description: Form template for editing an existing itinerary stop.
                     </div>
                     {% endif %}
                 {% endfor %}
-                <button type="submit" class="btn btn-dark">Save Changes</button>
+                <button type="submit" class="btn btn-dark btn-sm px-3">Save Changes</button>
             </form>
         </div>
     </div>
